Revision history for {{$dist->name}}},

{{$NEXT}}
  - Test name is now based on the generated class name (gh#18)
  - Test now includes basic template (commented out) for tool,
    XS and FFI tests (gh#7, gh#18)
  - Fixed syntax error in generated alienfile recipe if you selected
    both XS and FFI alien types (gh#18)

0.04      2021-10-02 20:53:22 -0600
  - Fix bug where Changes file was generated incorrectly (gh#17)

0.03      2021-09-26 17:46:19 -0600
  - Customize alienfile for use with the latest or specific
    version of the alienized package (gh#8, gh#16)

0.02      2021-09-26 11:07:30 -0600
  - Customize documentation and alienfile based on if tool,
    xs or ffi is chosen (gh#4, gh#5, gh#14)
  - Fixed bug where detected build system was not set as
    default (gh#10, gh#13)

0.01      2021-09-23 13:36:30 -0600
  - initial version

