@@ -4,3 +4,4 @@ set -ex
 
 cip sudo apt-get update
 cip sudo apt-get install libffi-dev libarchive-dev
+cip exec cpanm Sort::Versions
