@@ -6,6 +6,8 @@ Revision history for {{$dist->name}}},
     XS and FFI tests (gh#7, gh#18)
   - Fixed syntax error in generated alienfile recipe if you selected
     both XS and FFI alien types (gh#18)
+  - More extensive CI testing fixed a number of additional
+    syntax erros (gh#19)
 
 0.04      2021-10-02 20:53:22 -0600
   - Fix bug where Changes file was generated incorrectly (gh#17)
